crates/codegen/language/tests/src/fail/references/invalid_filter/test.stderr
error: Reference 'Baz' is not valid. Expected: NonTerminals.
  --> src/fail/references/invalid_filter/test.rs:14:75
   |
14 |                 Struct(name = Bar, fields = (field = Required(NonTerminal(Baz)))),
   |                                                                           ^^^
